@@ -1,0 +1,72 @@
+/* Intel Atom/32 gmp-mparam.h -- Compiler/machine parameter header file.
+
+Copyright 1991, 1993, 1994, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,
+2008, 2009 Free Software Foundation, Inc.
+
+This file is part of the GNU MP Library.
+
+The GNU MP Library is free software; you can redistribute it and/or modify
+it under the terms of the GNU Lesser General Public License as published by
+the Free Software Foundation; either version 3 of the License, or (at your
+option) any later version.
+
+The GNU MP Library is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
+License for more details.
+
+You should have received a copy of the GNU Lesser General Public License
+along with the GNU MP Library.  If not, see http://www.gnu.org/licenses/.  */
+
+#define GMP_LIMB_BITS 32
+#define BYTES_PER_MP_LIMB 4
+
+
+/* Generated by tuneup.c, 2009-11-28, gcc 4.4 */
+
+#define MUL_TOOM22_THRESHOLD             16
+#define MUL_TOOM33_THRESHOLD             67
+#define MUL_TOOM44_THRESHOLD            150
+
+#define SQR_BASECASE_THRESHOLD            0  /* always (native) */
+#define SQR_TOOM2_THRESHOLD              16
+#define SQR_TOOM3_THRESHOLD             113
+#define SQR_TOOM4_THRESHOLD             192
+
+#define MUL_FFT_TABLE  { 336, 672, 896, 2560, 10240, 24576, 98304, 393216, 0 }
+#define MUL_FFT_MODF_THRESHOLD          352
+#define MUL_FFT_THRESHOLD              2816
+
+#define SQR_FFT_TABLE  { 304, 672, 896, 2560, 6144, 24576, 98304, 393216, 0 }
+#define SQR_FFT_MODF_THRESHOLD          264
+#define SQR_FFT_THRESHOLD              1792
+
+#define MULLOW_BASECASE_THRESHOLD         0  /* always */
+#define MULLOW_DC_THRESHOLD              55
+#define MULLOW_MUL_N_THRESHOLD         5472
+
+#define MULMOD_BNM1_THRESHOLD            16
+
+#define DC_DIV_QR_THRESHOLD              59
+#define REDC_1_TO_REDC_N_THRESHOLD       72
+
+#define MATRIX22_STRASSEN_THRESHOLD      15
+#define HGCD_THRESHOLD                  112
+#define GCD_DC_THRESHOLD                379
+#define GCDEXT_DC_THRESHOLD             303
+#define JACOBI_BASE_METHOD                2
+
+#define MOD_1_NORM_THRESHOLD              3
+#define MOD_1_UNNORM_THRESHOLD            7
+#define MOD_1_1_THRESHOLD                 8
+#define MOD_1_2_THRESHOLD                11
+#define MOD_1_4_THRESHOLD                18
+#define USE_PREINV_DIVREM_1               1
+#define USE_PREINV_MOD_1                  1
+#define DIVEXACT_1_THRESHOLD              0  /* always (native) */
+#define MODEXACT_1_ODD_THRESHOLD      MP_SIZE_T_MAX  /* never */
+
+#define GET_STR_DC_THRESHOLD             13
+#define GET_STR_PRECOMPUTE_THRESHOLD     26
+#define SET_STR_DC_THRESHOLD            140
+#define SET_STR_PRECOMPUTE_THRESHOLD    889
