@@ -1,4 +1,4 @@
-/* Inte Atom gmp-mparam.h -- Compiler/machine parameter header file.
+/* Intel Atom/64 gmp-mparam.h -- Compiler/machine parameter header file.
 
 Copyright 1991, 1993, 1994, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,
 2008, 2009 Free Software Foundation, Inc.
@@ -20,6 +20,7 @@ along with the GNU MP Library.  If not, see http://www.gnu.org/licenses/.  */
 
 #define GMP_LIMB_BITS 64
 #define BYTES_PER_MP_LIMB 8
+
 
 /* Generated by tuneup.c, 2009-11-26, gcc 4.4 */
 
